# Trading_Bot

./: EMA_Strategy.py  README.md  bolinger_bands.py  ema_backtest_trades.csv  mt5.ipynb  pyproject.toml  sma_signal.py  sma_strategy.py  strategy.md
src/: EURUSD_H4.csv  data_ingest.py
